--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html><html lang="en"><head>
+<!doctype html>
+<html lang="en">
+<head>
   <meta charset="utf-8">
   <title>TestVercel</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+<link rel="stylesheet" href="styles.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.ee087d03b81c8cda.js" type="module"></script><script src="polyfills.d90ff70bd385a6cf.js" type="module"></script><script src="main.f234e818d70ac3c3.js" type="module"></script>
-
-</body></html>
+<script src="runtime.js" type="module"></script><script src="polyfills.js" type="module"></script><script src="vendor.js" type="module"></script><script src="main.js" type="module"></script></body>
+</html>
