--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
-<!doctype html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
-  <title>TestVercel</title>
+  <title>Flip a coin</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.css"></head>
+<style>html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}html{line-height:1.5;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;font-weight:400;color:#000000de}@media only screen and (min-width: 0){html{font-size:14px}}@media only screen and (min-width: 992px){html{font-size:14.5px}}@media only screen and (min-width: 1200px){html{font-size:15px}}body{height:100%;background:#1f5a82}</style><link rel="stylesheet" href="styles.91a5b14b0b5df307.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.91a5b14b0b5df307.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.js" type="module"></script><script src="polyfills.js" type="module"></script><script src="scripts.js" defer></script><script src="vendor.js" type="module"></script><script src="main.js" type="module"></script></body>
-</html>
+<script src="runtime.e80452b5d6989787.js" type="module"></script><script src="polyfills.b5086d7e47d3f3e7.js" type="module"></script><script src="scripts.c13bc99298f3ba6a.js" defer></script><script src="main.6c02db680120eef1.js" type="module"></script>
+
+
+</body></html>
